# llvm-ir-api-demos

./: CMakeLists.txt  README.md  main.cpp  test01.cpp
cfg/: fib.dot  fib.spl
ir/: add_jit.cpp  assign.cpp  call_defined_in_cpp.cpp  call_libc.cpp  call_self.cpp  complete_fib.cpp  if.cpp  llvm_fib.cpp  struct_demo.cpp  vararg.cpp
test/: move_test.cpp  test_template.cpp  test_unq.cpp
